[gd_scene load_steps=26 format=3 uid="uid://brfd3bsuthnis"]

[ext_resource type="PackedScene" uid="uid://bsoyuhcjevp6g" path="res://player.tscn" id="1_8k1dt"]
[ext_resource type="Script" path="res://world.gd" id="1_punah"]
[ext_resource type="Script" path="res://addons/inventory_system/item/inventory_data.gd" id="3_qfs2q"]
[ext_resource type="Resource" uid="uid://b5u5k8yw7vvbs" path="res://items/potion.tres" id="4_8ef36"]
[ext_resource type="Script" path="res://addons/inventory_system/inventory/slot_data.gd" id="5_kjnnp"]
[ext_resource type="Resource" uid="uid://dvx5kthg05osh" path="res://items/sword.tres" id="6_msoka"]
[ext_resource type="Script" path="res://addons/inventory_system/nodes/inventory_manager.gd" id="7_70hje"]
[ext_resource type="PackedScene" uid="uid://5cd20lpgj3cp" path="res://chest.tscn" id="10_w1bti"]
[ext_resource type="PackedScene" uid="uid://bc54xhouctwxn" path="res://items/pick_up.tscn" id="11_ymwtq"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_13j8l"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_eppj7"]
sky_material = SubResource("ProceduralSkyMaterial_13j8l")

[sub_resource type="Environment" id="Environment_1gce5"]
background_mode = 2
sky = SubResource("Sky_eppj7")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_a8aea"]
size = Vector2(20, 20)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ml8e6"]
data = PackedVector3Array(10, 0, 10, -10, 0, 10, 10, 0, -10, -10, 0, 10, -10, 0, -10, 10, 0, -10)

[sub_resource type="Resource" id="Resource_gn7hq"]
script = ExtResource("5_kjnnp")
item_data = ExtResource("4_8ef36")
quantity = 99

[sub_resource type="Resource" id="Resource_qejw4"]
script = ExtResource("5_kjnnp")
item_data = ExtResource("4_8ef36")
quantity = 99

[sub_resource type="Resource" id="Resource_4hadg"]
script = ExtResource("5_kjnnp")
item_data = ExtResource("6_msoka")
quantity = 1

[sub_resource type="Resource" id="Resource_ts8uj"]
script = ExtResource("5_kjnnp")
item_data = ExtResource("4_8ef36")
quantity = 48

[sub_resource type="Resource" id="Resource_bc8uq"]
script = ExtResource("3_qfs2q")
slot_datas = Array[ExtResource("5_kjnnp")]([SubResource("Resource_gn7hq"), SubResource("Resource_qejw4"), SubResource("Resource_4hadg"), SubResource("Resource_ts8uj")])

[sub_resource type="Resource" id="Resource_qqo2j"]
script = ExtResource("5_kjnnp")
item_data = ExtResource("4_8ef36")
quantity = 50

[sub_resource type="Resource" id="Resource_w5vs4"]
script = ExtResource("5_kjnnp")
item_data = ExtResource("4_8ef36")
quantity = 50

[sub_resource type="Resource" id="Resource_7gjrv"]
script = ExtResource("5_kjnnp")
item_data = ExtResource("4_8ef36")
quantity = 50

[sub_resource type="Resource" id="Resource_1bo4t"]
script = ExtResource("5_kjnnp")
item_data = ExtResource("4_8ef36")
quantity = 50

[sub_resource type="Resource" id="Resource_scwn0"]
script = ExtResource("5_kjnnp")
item_data = ExtResource("4_8ef36")
quantity = 50

[sub_resource type="Resource" id="Resource_6rt8c"]
script = ExtResource("5_kjnnp")
item_data = ExtResource("4_8ef36")
quantity = 50

[node name="world" type="Node"]
script = ExtResource("1_punah")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1gce5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="ground" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_a8aea")

[node name="StaticBody3D" type="StaticBody3D" parent="ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ground/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ml8e6")

[node name="player" parent="." instance=ExtResource("1_8k1dt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.477758, 2.38419e-07, 0.496971)
inventory_data = SubResource("Resource_bc8uq")

[node name="ui" type="CanvasLayer" parent="."]

[node name="inventory_manager" type="CanvasLayer" parent="ui"]
script = ExtResource("7_70hje")

[node name="chest" parent="." instance=ExtResource("10_w1bti")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.16797, 1.19209e-07, 0.208826)

[node name="pick_up" parent="." instance=ExtResource("11_ymwtq")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 5.41254, 0.268551, 3.46171)
slot_data = SubResource("Resource_qqo2j")

[node name="pick_up2" parent="." instance=ExtResource("11_ymwtq")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -4.94537, 0.268551, 1.31032)
slot_data = SubResource("Resource_w5vs4")

[node name="pick_up3" parent="." instance=ExtResource("11_ymwtq")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -5.50016, 0.268551, -3.83888)
slot_data = SubResource("Resource_7gjrv")

[node name="pick_up4" parent="." instance=ExtResource("11_ymwtq")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -1.1378, 0.268551, -7.26063)
slot_data = SubResource("Resource_1bo4t")

[node name="pick_up5" parent="." instance=ExtResource("11_ymwtq")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 5.82975, 0.268551, 7.48227)
slot_data = SubResource("Resource_scwn0")

[node name="pick_up6" parent="." instance=ExtResource("11_ymwtq")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 2.97514, 0.268551, -5.98839)
slot_data = SubResource("Resource_6rt8c")

[connection signal="drop_slot_data" from="ui/inventory_manager" to="." method="_on_inventory_manager_drop_slot_data"]
[connection signal="gui_input" from="ui/inventory_manager/inventory_interface" to="ui/inventory_manager/inventory_interface" method="_on_gui_input"]
[connection signal="visibility_changed" from="ui/inventory_manager/inventory_interface" to="ui/inventory_manager/inventory_interface" method="_on_visibility_changed"]
